[OYPD-165] Add document upload for background entity add, and document embed test.

--- a/behat.yml
+++ b/behat.yml
@@ -27,6 +27,7 @@ default:
     Behat\MinkExtension:
       goutte: ~
       selenium2: ~
+      files_path: %paths.base%/tests/files
     Drupal\DrupalExtension:
       api_driver: drupal
       drush_driver: drush
