--- a/modules/openy_features/openy_location/modules/openy_loc_branch/config/install/core.entity_form_display.node.branch.default.yml
+++ b/modules/openy_features/openy_location/modules/openy_loc_branch/config/install/core.entity_form_display.node.branch.default.yml
@@ -2,6 +2,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.branch.field_bottom_content
     - field.field.node.branch.field_branch_hours
     - field.field.node.branch.field_content
     - field.field.node.branch.field_header_content
@@ -77,7 +78,7 @@ third_party_settings:
       children:
         - field_header_content
       parent_name: ''
-      weight: 4
+      weight: 3
       format_type: tab
       format_settings:
         id: ''
@@ -90,7 +91,7 @@ third_party_settings:
       children:
         - field_content
       parent_name: ''
-      weight: 5
+      weight: 4
       format_type: tab
       format_settings:
         id: ''
@@ -99,6 +100,19 @@ third_party_settings:
         description: ''
         required_fields: true
       label: 'Content Area'
+    group_bottom_area:
+      children:
+        - field_bottom_content
+      parent_name: ''
+      weight: 5
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: 'Bottom Area'
 id: node.branch.default
 targetEntityType: node
 bundle: branch
@@ -108,6 +122,16 @@ content:
     type: datetime_timestamp
     weight: 7
     settings: {  }
+    third_party_settings: {  }
+  field_bottom_content:
+    type: entity_reference_paragraphs
+    weight: 26
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
     third_party_settings: {  }
   field_branch_hours:
     weight: 3
