--- a/modules/openy_features/openy_node/config/install/tour.tour.openy-node-add.yml
+++ b/modules/openy_features/openy_node/config/install/tour.tour.openy-node-add.yml
@@ -2,17 +2,18 @@ langcode: en
 status: true
 dependencies:
   module:
-    - node
+    - openy_node
 id: openy-node-add
 label: 'OpenY Node Add'
 module: openy_node
 routes:
-  - route_name: node.add_page
+  -
+    route_name: node.add_page
 tips:
   overview:
     id: overview
     plugin: text
-    label: 'Overview'
+    label: Overview
     body: 'This page lists all the different type of content that can be added to the site.'
     weight: 1
   program:
@@ -56,7 +57,7 @@ tips:
     attributes:
       data-class: 'label:contains("Session")'
   blog:
-    id:
+    id: null
     plugin: text
     label: 'Blog post Content'
     body: 'Here a user can add a blog. The Blog contains a title, style(teaser appearance), location of the blog, category, a taxonomy fields that groups the blog, a content area which is the main piece of content for the blog and a sidebar area.'
