--- a/modules/openy_features/openy_node/modules/openy_node_landing/config/install/core.entity_form_display.node.landing_page.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_landing/config/install/core.entity_form_display.node.landing_page.default.yml
@@ -2,6 +2,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.landing_page.field_bottom_content
     - field.field.node.landing_page.field_content
     - field.field.node.landing_page.field_header_content
     - field.field.node.landing_page.field_lp_layout
@@ -52,6 +53,19 @@ third_party_settings:
         description: ''
         required_fields: true
       label: 'Sidebar Area'
+    group_bottom_area:
+      children:
+        - field_bottom_content
+      parent_name: ''
+      weight: 5
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: 'Bottom Area'
 id: node.landing_page.default
 targetEntityType: node
 bundle: landing_page
@@ -59,9 +73,19 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 6
+    weight: 7
     settings: {  }
     third_party_settings: {  }
+  field_bottom_content:
+    weight: 26
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+    third_party_settings: {  }
+    type: entity_reference_paragraphs
   field_content:
     weight: 11
     settings:
@@ -99,20 +123,20 @@ content:
     type: entity_reference_paragraphs
   path:
     type: path
-    weight: 9
+    weight: 10
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 7
+    weight: 8
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 8
+    weight: 9
     third_party_settings: {  }
   title:
     type: string_textfield
@@ -123,7 +147,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 6
     settings:
       match_operator: CONTAINS
       size: 60
