--- a/modules/openy_features/openy_node/modules/openy_node_landing/config/install/core.entity_view_display.node.landing_page.full.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_landing/config/install/core.entity_view_display.node.landing_page.full.yml
@@ -3,6 +3,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.full
+    - field.field.node.landing_page.field_bottom_content
     - field.field.node.landing_page.field_content
     - field.field.node.landing_page.field_header_content
     - field.field.node.landing_page.field_lp_layout
@@ -17,6 +18,14 @@ targetEntityType: node
 bundle: landing_page
 mode: full
 content:
+  field_bottom_content:
+    type: entity_reference_revisions_entity_view
+    weight: 4
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
   field_content:
     weight: 2
     label: hidden
