--- a/modules/openy_features/openy_node/openy_node.info.yml
+++ b/modules/openy_features/openy_node/openy_node.info.yml
@@ -7,9 +7,10 @@ dependencies:
   - field
   - jquery_colorpicker
   - node
+  - openy_node
   - paragraphs
   - path
   - taxonomy
   - text
   - tour
-version: 8.x-1.0
+version: 8.x-1.1
