--- a/modules/openy_features/openy_prgf/config/install/openy_prgf.settings.yml
+++ b/modules/openy_features/openy_prgf/config/install/openy_prgf.settings.yml
@@ -38,6 +38,24 @@ fields_unset_paragraphs:
     - teaser
     - promo_card
     - story_card
+  field_bottom_content:
+    - blog_posts_listing
+    - categories_listing
+    - classes_listing
+    - featured_blogs
+    - featured_content
+    - grid_columns
+    - grid_content
+    - latest_blog_posts
+    - latest_blog_posts_branch
+    - latest_blog_posts_camp
+    - prgf_location_finder
+    - openy_prgf_mbrshp_calc
+    - membership_info
+    - session_time
+    - teaser
+    - promo_card
+    - story_card
   field_content:
     - grid_columns
     - membership_info
