--- a/openy.info.yml
+++ b/openy.info.yml
@@ -72,6 +72,7 @@ dependencies:
   - webform
   - webform_ui
   - captcha
+  - image_captcha
   - recaptcha
   # OpenY features.
   - openy_media_image
