--- a/config/install/core.entity_view_display.node.event.default.yml
+++ b/config/install/core.entity_view_display.node.event.default.yml
@@ -2,7 +2,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.event.field_event_date
+    - field.field.node.event.field_event_date_range
     - field.field.node.event.field_landing_body
     - field.field.node.event.field_sidebar_content
     - field.field.node.event.rng_capacity
@@ -15,7 +15,7 @@ dependencies:
     - field.field.node.event.rng_status
     - node.type.event
   module:
-    - datetime
+    - datetime_range
     - entity_reference_revisions
     - user
 id: node.event.default
@@ -23,14 +23,15 @@ targetEntityType: node
 bundle: event
 mode: default
 content:
-  field_event_date:
-    type: datetime_default
+  field_event_date_range:
     weight: 2
     label: inline
     settings:
+      separator: '-'
       format_type: medium
       timezone_override: ''
     third_party_settings: {  }
+    type: daterange_default
   field_landing_body:
     weight: 0
     label: hidden
