--- a/openy_node_event.info.yml
+++ b/openy_node_event.info.yml
@@ -9,6 +9,7 @@ dependencies:
   - courier
   - ctools
   - datetime
+  - datetime_range
   - entity_reference_revisions
   - field
   - language
@@ -33,8 +34,9 @@ dependencies:
   - rng
   - rng_contact
   - rng_quick
+  - tour
   - unlimited_number
   - user
   - veoa
   - views
-version: 8.x-1.3
+version: 8.x-1.4
