[YGH-463] Fix titles for card sections

--- a/openy_prgf_loc_finder/config/install/views.view.locations.yml
+++ b/openy_prgf_loc_finder/config/install/views.view.locations.yml
@@ -258,10 +258,23 @@ display:
       defaults:
         filters: false
         filter_groups: false
+        header: false
       filter_groups:
         operator: AND
         groups:
           1: AND
+      header:
+        area_text_custom:
+          id: area_text_custom
+          table: views
+          field: area_text_custom
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: true
+          tokenize: false
+          content: '<h2>Camp Locations</h2>'
+          plugin_id: text_custom
     cache_metadata:
       max-age: -1
       contexts:
