[YGH-484] Set default value for end event date to current date

--- a/config/install/field.field.node.event.field_event_date_range.yml
+++ b/config/install/field.field.node.event.field_event_date_range.yml
@@ -18,8 +18,8 @@ default_value:
   -
     default_date_type: now
     default_date: now
-    default_end_date_type: ''
-    default_end_date: ''
+    default_end_date_type: now
+    default_end_date: now
 default_value_callback: ''
 settings: {  }
 field_type: daterange
