[OYPD-28] Add Scheduler default config for blog, landing page and program bundles

--- a/modules/openy_features/openy_node/modules/openy_node_blog/config/install/core.entity_form_display.node.blog.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_blog/config/install/core.entity_form_display.node.blog.default.yml
@@ -19,6 +19,7 @@ dependencies:
     - field_group
     - paragraphs
     - path
+    - scheduler
     - text
 third_party_settings:
   field_group:
@@ -162,6 +163,11 @@ content:
       display_label: true
     weight: 9
     third_party_settings: {  }
+  publish_on:
+    type: datetime_timestamp_no_default
+    weight: 30
+    settings: {  }
+    third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
@@ -182,5 +188,10 @@ content:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
+    third_party_settings: {  }
+  unpublish_on:
+    type: datetime_timestamp_no_default
+    weight: 30
+    settings: {  }
     third_party_settings: {  }
 hidden: {  }
