--- a/modules/openy_features/openy_node/modules/openy_node_landing/config/install/core.entity_form_display.node.landing_page.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_landing/config/install/core.entity_form_display.node.landing_page.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field_group
     - paragraphs
     - path
+    - scheduler
 third_party_settings:
   field_group:
     group_header_area:
@@ -132,6 +133,11 @@ content:
       display_label: true
     weight: 8
     third_party_settings: {  }
+  publish_on:
+    type: datetime_timestamp_no_default
+    weight: 30
+    settings: {  }
+    third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
@@ -152,5 +158,10 @@ content:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
+    third_party_settings: {  }
+  unpublish_on:
+    type: datetime_timestamp_no_default
+    weight: 30
+    settings: {  }
     third_party_settings: {  }
 hidden: {  }
