--- a/modules/openy_features/openy_node/modules/openy_node_program/config/install/core.entity_form_display.node.program.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_program/config/install/core.entity_form_display.node.program.default.yml
@@ -15,6 +15,7 @@ dependencies:
     - field_group
     - paragraphs
     - path
+    - scheduler
     - text
 third_party_settings:
   field_group:
@@ -137,6 +138,11 @@ content:
       display_label: true
     weight: 6
     third_party_settings: {  }
+  publish_on:
+    type: datetime_timestamp_no_default
+    weight: 30
+    settings: {  }
+    third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
@@ -157,5 +163,10 @@ content:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
+    third_party_settings: {  }
+  unpublish_on:
+    type: datetime_timestamp_no_default
+    weight: 30
+    settings: {  }
     third_party_settings: {  }
 hidden: {  }
