--- a/config/install/field.field.block_content.expander_block.field_block_header.yml
+++ b/config/install/field.field.block_content.expander_block.field_block_header.yml
@@ -17,7 +17,7 @@ bundle: expander_block
 label: 'Block Header'
 description: ''
 required: true
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
