--- a/docroot/modules/custom/ymca_mindbody/ymca_mindbody.routing.yml
+++ b/docroot/modules/custom/ymca_mindbody/ymca_mindbody.routing.yml
@@ -34,6 +34,13 @@ ymca_mindbody.location.pt.results:
     parameters:
       node:
         type: entity:node
+ymca_mindbody.pt.confirmation:
+  path: '/health__fitness/personal_training/personal-trainer-schedules/confimation'
+  defaults:
+    _controller: '\Drupal\ymca_mindbody\Controller\MindbodyResultsController::confirmation'
+    _title: 'Booking confirmation'
+  requirements:
+    _permission: 'access content'
 ymca_mindbody.pt.book:
   path: '/health__fitness/personal_training/personal-trainer-schedules/book'
   defaults:
