--- a/docroot/sites/default/config/staging/views.view.staff_mapping.yml
+++ b/docroot/sites/default/config/staging/views.view.staff_mapping.yml
@@ -12,6 +12,7 @@ dependencies:
     - ymca_mappings.mapping_type.staff
   module:
     - better_exposed_filters
+    - node
     - taxonomy
     - user
     - ymca_mappings
@@ -668,11 +669,11 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           plugin_id: string
-        name:
-          id: name
-          table: mapping
-          field: name
-          relationship: field_staff_branch
+        title:
+          id: title
+          table: node_field_data
+          field: title
+          relationship: field_staff_branch_1
           group_type: group
           admin_label: ''
           operator: contains
@@ -680,12 +681,12 @@ display:
           group: 1
           exposed: true
           expose:
-            operator_id: name_op
+            operator_id: title_op
             label: Branch
             description: ''
             use_operator: false
-            operator: name_op
-            identifier: name
+            operator: title_op
+            identifier: title
             required: false
             remember: false
             multiple: false
@@ -709,8 +710,8 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          entity_type: mapping
-          entity_field: name
+          entity_type: node
+          entity_field: title
           plugin_id: string
         field_staff_type_target_id:
           id: field_staff_type_target_id
@@ -767,13 +768,13 @@ display:
       footer: {  }
       empty: {  }
       relationships:
-        field_staff_branch:
-          id: field_staff_branch
+        field_staff_branch_1:
+          id: field_staff_branch_1
           table: mapping__field_staff_branch
           field: field_staff_branch
           relationship: none
           group_type: group
-          admin_label: 'field_staff_branch: Mapping'
+          admin_label: 'field_staff_branch: Content'
           required: false
           plugin_id: standard
       arguments: {  }
