[YPTF-237]: add link to staff in the view.

--- a/docroot/sites/default/config/staging/views.view.staff_mapping.yml
+++ b/docroot/sites/default/config/staging/views.view.staff_mapping.yml
@@ -229,7 +229,7 @@ display:
           click_sort_column: value
           type: string
           settings:
-            link_to_entity: false
+            link_to_entity: true
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -292,7 +292,7 @@ display:
           click_sort_column: value
           type: string
           settings:
-            link_to_entity: false
+            link_to_entity: true
           group_column: value
           group_columns: {  }
           group_rows: true
