[OYPD- XXX] Limit the regions where the Embedded GroupEx Pro Schedule can be used.

--- a/modules/openy_features/openy_prgf/config/install/openy_prgf.settings.yml
+++ b/modules/openy_features/openy_prgf/config/install/openy_prgf.settings.yml
@@ -6,6 +6,7 @@ fields_unset_paragraphs:
     - categories_listing
     - classes_listing
     - classes_listing_filters
+    - embedded_groupexpro_schedule
     - featured_blogs
     - featured_content
     - gallery
@@ -24,6 +25,7 @@ fields_unset_paragraphs:
     - blog_posts_listing
     - categories_listing
     - classes_listing
+    - embedded_groupexpro_schedule
     - featured_blogs
     - featured_content
     - grid_columns
@@ -42,6 +44,7 @@ fields_unset_paragraphs:
     - blog_posts_listing
     - categories_listing
     - classes_listing
+    - embedded_groupexpro_schedule
     - featured_blogs
     - featured_content
     - grid_columns
